--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hope Foundation</title>
+  <title>Shree Jee Parivaar Trust</title>
   <style>
     body {
       margin: 0;
@@ -98,7 +98,7 @@
 <body>
 
 <header>
-  <h1>Hope Foundation</h1>
+  <h1>Shree Jee Parivaar Trust</h1>
   <nav>
     <a href="#">Home</a>
     <a href="#about">About</a>
@@ -115,18 +115,33 @@
 <section id="about" class="about">
   <h2>About Us</h2>
   <p>
-    Hope Foundation is a non-profit organization committed to transforming lives through education, healthcare, and community empowerment. We believe every individual deserves the chance to live with dignity, opportunity, and hope.
+Shriji Parivar Trust, established in 2024 in the serene hills of Chail, District Solan (Himachal Pradesh), is a spiritual and charitable organization inspired by the divine grace of Goddess Radha (Shriji). The trust is committed to the service of GauMata, the underprivileged, and the environment, guided by the values of Sanatan Dharma, selfless service (seva), and community upliftment.
   </p>
 </section>
 
 <section id="work" class="work">
   <h2>Our Work</h2>
-  <ul>
-    <li>📚 Free education programs for underprivileged children</li>
+  <p>Gau Sewa: Rescue, nourishment, and shelter of abandoned cows through Shriji Gaushala, under the campaign "Gau Sewa Se Rashtra Sewa".</p>
+
+      <ul>
+    <li>📚 Spiritual Awareness: Inner awakening and soul connection through the campaign “Love for Self”, promoting dhyana, satsang, and self-realization.</li>
     <li>🏥 Medical camps and health awareness</li>
-    <li>💼 Women empowerment and vocational training</li>
-    <li>🌿 Sustainability and environmental awareness campaigns</li>
+    <li>💼 Environment: Tree plantation and jungle cleanliness drives under “Ek Ped Aane Wale Ke Naam”, securing a green future for coming generations.</li>
+    <li>🌿Girl Education: Empowering rural girls through the “Shriji ki Betiya” campaign, supporting education and self-growth.</li>
+        <li> Social Welfare: Serving the poor, supporting rural communities, and organizing health and awareness camps.</li>
   </ul>
+
+  
+</section>
+<section id="priniciple" class="🤝 Our Principles">
+  <h2>🤝 Our Principles</h2>
+    <p>
+Seva over Salary: All trustees serve voluntarily, with no personal gain or salary.
+Community First: Working at the grassroots level with local and global supporters.
+Partnership & Learning: Collaborative approach with individuals, organizations, and volunteers.
+Faith & Service: Every activity is an offering of love and devotion to Shriji and the divine creation.
+  </p>
+<p>“Shriji Parivar Trust – Serving with love, growing with faith.”           Join us in building a compassionate, conscious, and self-reliant Bharat.</p>
 </section>
 
 <section id="donate" class="donate">
@@ -136,9 +151,27 @@
 </section>
 
 <footer id="contact">
-  <p>📍 123 NGO Street, City Name, Country</p>
-  <p>📧 contact@hopefoundation.org | 📞 +91-9876543210</p>
-  <p>&copy; 2025 Hope Foundation. All rights reserved.</p>
+     <h3>Contact Us</h3>
+  <p>📍The Samihan, Shriji Niwas, Chail
+Distt. Solan HP 173217 Bharat. 
+</p>
+  <p>📧 shrijiparivarchail@gmail.com</p>
+   <p>📞 +91 78078-18058</p>
+  <p>&copy; 2025 ShreeJeeParivaaarTrust. All rights reserved.</p>
+
+  <!-- Social Media Icons -->
+  <div style="margin-top: 20px;">
+    <a href="https://www.facebook.com/share/16i9UwxqCb/" target="_blank" style="margin: 0 10px;">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube" width="30" height="30">
+    </a>
+    <a href="https://www.instagram.com/shrijiparivar_trust/profilecard/?igsh=MThuaDE4Mnc3Ym8zaQ==" target="_blank" style="margin: 0 10px;">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram" width="30" height="30">
+    </a>
+    <a href="https://www.facebook.com/share/16i9UwxqCb/" target="_blank" style="margin: 0 10px;">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="Facebook" width="30" height="30">
+    </a>
+  </div>
+
 </footer>
 
 </body>
