--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Header -->
   <header>
-    <img src="logo.png" alt="ShreeJee Parivar Trust Logo">
+    <img src="assets/images/b.jpg" alt="ShreeJee Parivar Trust Logo">
     <h1>ShreeJee Parivar Trust</h1>
     <p>"Serving with love, growing with faith"</p>
   </header>
