--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ header {
 }
 
 .header-logo {
-  width: 400px; 
-  height:400px;
+  width: 80px; 
+  height:80px;
 }
     body {   
   scroll-snap-type: y mandatory;
@@ -90,9 +90,14 @@ header {
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
   font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
-    header { background: #ffffff; text-align: center; }
-     nav { background: #006400; padding: 10px; text-align: center; }
-    nav a { color: #fff; text-decoration: none; margin: 0 15px; font-weight: bold; }
+    header { background: #ffffff; text-align: center; 
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  position: sticky;   /* optional */
+  top: 0;
+  z-index: 1000;
+}
+     nav { background: #fffff; padding: 10px; text-align: center; }
+    nav a { color: #000000; text-decoration: none; margin: 0 35px; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     .section { padding: 30px; text-align: center; }
     .section h2 { color: #006400; margin-bottom: 15px; }
@@ -111,10 +116,7 @@ header {
 <header>
     <img src="assets/images/logo1.jpg" alt="Trust Logo" class="header-logo">
   <div class="header-content">
-    <div class="header-text">
-      <h1>ShreeJee Parivar Trust</h1>
-      <p>"Serving with love, growing with faith"</p>
-    </div>
+     
       <!-- Navigation -->
   <nav>
     <a href="#home">Home</a>
