--- a/index.html
+++ b/index.html
@@ -126,7 +126,29 @@ header {
   </nav>
   </div>
 </header>
+<section class="home" id="home">
+  <div class="home-container">
 
+    <!-- LEFT : LOGO -->
+    <div class="home-left">
+      <img src="images/logo12.jpg" alt="Logo">
+    </div>
+
+    <!-- RIGHT : CAROUSEL -->
+    <div class="home-right">
+         <div class="carousel">
+    <img src="assets/images/sj_Bannera1.jpg" class="active">
+    <img src="assets/images/sj_Banner2.jpg">
+    <img src="assets/images/sj_Banner3.jpg">
+    <img src="assets/images/sj_Banner4.jpg">
+     <img src="assets/images/certificate1.jpg">
+
+  </div>
+      
+    </div>
+
+  </div>
+</section>
 
   <div class="carousel">
     <img src="assets/images/sj_Bannera1.jpg" class="active">
