--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
             z-index: 2;
             padding: 20px;
         }
+ .logo-wrapper {
+            margin-bottom: 20px;
+        }
+        .logo-img {
+            width: 220px;
+            height: auto;
+            border-radius: 50%;
+            box-shadow: 0 0 30px rgba(255,215,0,0.6), 0 10px 20px rgba(0,0,0,0.4);
+            transition: transform 0.4s ease;
+        }
+        .logo-img:hover { transform: scale(1.08); }
         .logo { font-size:3.5rem; font-weight:700; color:var(--gold); margin-bottom:15px; }
         .sanskrit { font-size:3rem; color:var(--gold); margin:30px 0; }
         
@@ -183,6 +194,9 @@
         </div>
         <div class="overlay">
             <div class="container header-content">
+   <div class="logo-wrapper">
+                    <img src="https://raw.githubusercontent.com/infynity111/Shriji/refs/heads/main/logo12.jpg" alt="Shriji Parivar Trust Logo" class="logo-img">
+                </div>
                 <div class="logo">Shriji Parivar Trust</div>
                 <div class="sanskrit">उत्तिष्ठत जाग्रत प्राप्य वरान्निबोधत</div>
                 <p style="font-size:1.5rem; font-style:italic; margin:20px 0;">Arise! Awake! Approach the great and learn the Truth.</p>
@@ -198,6 +212,12 @@
             <p style="text-align:center; max-width:900px; margin:0 auto 40px; font-size:1.2rem;">
                 Inspired by the divine grace of Goddess Radha (Shriji), we serve GauMata, the underprivileged, and the environment through selfless seva, rooted in Sanatan Dharma.
             </p>
+<p>Shriji Parivaar Trust, established on 11th of September 2024 on the pious day of Radhaashtmi in amidst the serene and spiritual surroundings of Chail, nestled in the tranquil hills of District Solan, Himachal Pradesh, is a humble yet profound initiative born out of deep devotion and unwavering faith. Inspired by the boundless kindness, unconditional love, and divine compassion of Goddess Radha, the Trust stands as a beacon of selfless service and spiritual upliftment.
+
+Rooted in the ethos of “Seva Parmo Dharma”—service is the highest duty—Shriji Parivaar Trust is dedicated to serving humanity, especially the needy, underprivileged, and the sacred GauMata (Mother Cow). Every action of the Trust is a tribute to the nurturing and merciful spirit of Shri Radha Rani, who exemplifies the purest form of love and care.
+
+With a vision to bring holistic support to rural communities and promote Vedic values, the Trust engages in charitable, educational, environmental, and spiritual initiatives, seeking to create a harmonious blend of service and devotion in every endeavor.
+</p>
         </div>
     </section>
 
